--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "yarn open-browser && next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "open-browser": "open http://localhost:3000"
   },
   "dependencies": {
-    "next": "^10.1.3",
+    "next": "^10.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
