--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "dev": "yarn open-browser && next dev",
     "build": "next build",
     "start": "next start",
-    "open-browser": "open http://localhost:3000"
+    "open-browser": "open http://localhost:3000 https://nextjs.org/docs/getting-started https://tailwindcss.com/docs"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.0",
     "next": "^10.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
