--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "yarn open-browser && next dev",
+    "dev": "code . && yarn open-browser && next dev",
     "build": "next build",
     "start": "next start",
     "open-browser": "open http://localhost:3000 https://nextjs.org/docs/getting-started https://tailwindcss.com/docs"
