--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
+  "css.validate": false,
     "editor.formatOnSave": true,
+    "editor.quickSuggestions": {
+      "strings": true
+    },
     "workbench.editor.enablePreview": false,
     "workbench.editor.wrapTabs": true,
     "workbench.colorTheme": "In Bed by 7pm",
