--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.4.0",
     "cntl": "^1.0.0",
+    "date-fns": "^2.21.2",
+    "gray-matter": "^4.0.3",
     "next": "^10.2.0",
+    "next-mdx-remote": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9"
