--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "suite": "open -a Simulator && code . && yarn open-browser && next dev",
+    "suite": "code . && open -a Simulator && echo launching sim... && sleep 30 && yarn open-browser && next dev",
     "build": "next build",
     "start": "next start",
     "open-browser": "open http://localhost:3000 https://nextjs.org/docs/getting-started https://tailwindcss.com/docs && xcrun simctl openurl booted http://localhost:3000"
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^15.3.0",
-    "@types/react": "^17.0.5",
+    "@types/react": "^17.0.6",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.15",
     "tailwindcss": "^2.1.2",
