--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
-    "cntl": "^1.0.0",
+    "fathom-client": "^3.0.0",
     "gray-matter": "^4.0.3",
     "next": "^10.2.3",
     "next-mdx-remote": "^3.0.2",
