--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gray-matter": "^4.0.3",
     "next": "^10.2.3",
     "next-mdx-remote": "^3.0.2",
+    "next-plausible": "^1.6.1",
     "next-seo": "^4.24.0",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
