--- a/package.json
+++ b/package.json
@@ -23,11 +23,18 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@cypress/react": "^5.9.1",
+    "@cypress/webpack-dev-server": "^1.4.0",
+    "@testing-library/cypress": "^7.0.6",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "autoprefixer": "^10.2.6",
+    "cypress": "^7.5.0",
+    "html-webpack-plugin": "4",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.2",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "webpack": "4",
+    "webpack-dev-server": "^3.11.2"
   }
 }
