--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "lint": "eslint . --ext js,ts,tsx",
     "suite": "code . && open -a Simulator && echo launching sim... && sleep 30 && yarn open-browser && next dev",
     "build": "next build",
     "start": "next start",
@@ -25,8 +26,15 @@
   "devDependencies": {
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "postcss": "^8.3.5",
+    "prettier": "^2.3.1",
     "tailwindcss": "^2.2.2",
     "typescript": "^4.3.4"
   }
