Add cypress dir & github workflows

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "root": true,
     "ignorePatterns": [
       "node_modules/",
-      "*.config.js"
+      "*.config.js",
+      "cypress/"
     ],
     "parser": "@typescript-eslint/parser",
     "plugins": [
