--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "lint": "eslint . --ext js,ts,tsx",
+    "test": "cypress run",
     "suite": "code . && open -a Simulator && echo launching sim... && sleep 30 && yarn open-browser && next dev",
     "build": "next build",
     "start": "next start",
@@ -25,7 +26,6 @@
   },
   "devDependencies": {
     "@cypress/react": "^5.9.1",
-    "@cypress/webpack-dev-server": "^1.4.0",
     "@testing-library/cypress": "^7.0.6",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
@@ -36,15 +36,11 @@
     "eslint": "^7.29.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
-    "html-webpack-plugin": "4",
     "postcss": "^8.3.5",
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.4",
-    "typescript": "^4.3.4",
-    "webpack": "4",
-    "webpack-dev-server": "^3.11.2"
+    "typescript": "^4.3.4"
   },
   "prettier": {
     "trailingComma": "es5",
