Add new dance video & tweak automerge action

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,3 +37,10 @@ jobs:
             "state": "failure",
             "description": "Cypress tests failed"
           }'
+  automerge:
+    needs: Cypress
+    runs-on: ubuntu-latest
+    steps:
+      - uses: fastify/github-action-merge-dependabot@v2.1.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
