--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "prettier": {
     "trailingComma": "es5",
     "tabWidth": 2,
-    "singleQuote": false,
+    "singleQuote": true,
     "printWidth": 85
   },
   "eslintConfig": {
