--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: ahmadnassri/action-dependabot-auto-merge@v2
         with:
           target: minor
-          github-token: ${{ secrets.ACTION_GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
