--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "suite": "code . && open -a Simulator && echo launching sim... && sleep 30 && yarn open-browser && next dev",
     "build": "next build",
     "start": "next start",
-    "open-browser": "open http://localhost:3000 https://nextjs.org/docs/getting-started https://tailwindcss.com/docs && xcrun simctl openurl booted http://localhost:3000"
+    "open-browser": "open http://localhost:3000 https://nextjs.org/docs/getting-started https://tailwindcss.com/docs && xcrun simctl openurl booted http://localhost:3000",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.1",
@@ -25,6 +26,8 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@cypress/react": "^5.9.1",
     "@testing-library/cypress": "^7.0.6",
     "@types/node": "^16.0.1",
@@ -37,6 +40,8 @@
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "tailwindcss": "^2.2.4",
@@ -47,6 +52,14 @@
     "tabWidth": 2,
     "singleQuote": true,
     "printWidth": 85
+  },
+  "commitlint": {
+    "extends": "@commitlint/config-conventional"
+  },
+  "lint-staged": {
+    "*.+(ts|tsx)": [
+      "eslint --fix"
+    ]
   },
   "eslintConfig": {
     "root": true,
