chore: pkg.json work

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "www",
+  "description": "My personal website.",
   "version": "0.1.0",
   "commitlint": {
     "extends": "@commitlint/config-conventional"
