--- a/src/firebase/firebase.json
+++ b/src/firebase/firebase.json
@@ -3,5 +3,8 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
-  "functions": {}
+  "functions": {
+    "source": "functions",
+    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
+  }
 }
