chore: cleanup firebase fxs and revert to js

--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "ignorePatterns": [
       "node_modules/",
       "*.config.js",
-      "cypress/",
-      "firebase/"
+      "cypress/"
     ],
     "parser": "@typescript-eslint/parser",
     "plugins": [
