--- a/src/firebase/functions/package.json
+++ b/src/firebase/functions/package.json
@@ -1,9 +1,9 @@
 {
   "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "build": "tsc",
-    "serve": "yarn build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
@@ -11,15 +11,14 @@
   "engines": {
     "node": "14"
   },
-  "main": "lib/index.js",
+  "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^9.8.0",
+    "firebase-admin": "^9.11.1",
     "firebase-functions": "^3.15.5",
     "twit": "^2.2.11"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.3.2",
-    "typescript": "^4.4.2"
+    "firebase-functions-test": "^0.3.2"
   },
   "private": true
 }
