chore: add firebase dir to eslint ignored

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "ignorePatterns": [
       "node_modules/",
       "*.config.js",
-      "cypress/"
+      "cypress/",
+      "firebase/"
     ],
     "parser": "@typescript-eslint/parser",
     "plugins": [
