chore: config vscode theme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     },
     "workbench.editor.enablePreview": false,
     "workbench.editor.wrapTabs": true,
-    "workbench.colorTheme": "In Bed by 7pm",
+    "workbench.colorTheme": "Shades of Purple",
     "typescript.tsdk": "node_modules/typescript/lib",
     "editor.fontSize": 15.75,
       "customizeUI.fontSizeMap": {
