--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-youtube": "^9.0.3",
-    "tabler-icons-react": "^1.53.0"
+    "tabler-icons-react": "^1.53.0",
+    "use-http": "^1.0.26"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
