--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Run Cypress
         uses: cypress-io/github-action@v4
+        with:
+          install-command: npm ci --legacy-peer-deps
         env:
           CYPRESS_BASE_URL: ${{ github.event.deployment_status.target_url }}
       - name: Cypress tests ✅
