--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.1.6",
     "@mantine/dates": "^5.2.0",
     "@mantine/hooks": "^5.0.2",
