--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swr": "^1.3.0",
     "tabler-icons-react": "^1.55.0",
     "use-http": "^1.0.27"
   },
