--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tabler-icons-react": "^1.55.0",
-    "use-http": "^1.0.27"
+    "swr": "^1.3.0",
+    "tabler-icons-react": "^1.55.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
