--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "extends": "@commitlint/config-conventional"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.4",
+    "@apollo/client": "^3.7.5",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.9.4",
@@ -24,26 +24,27 @@
     "dayjs": "^1.11.7",
     "graphql": "^16.6.0",
     "moviedb-promise": "^3.3.1",
-    "next": "^12.3.1",
+    "next": "^13.1.6",
     "next-seo": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^1.3.0",
+    "swr": "^2.0.3",
     "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "@next/eslint-plugin-next": "^12.3.1",
+    "@next/eslint-plugin-next": "^12.3.4",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "cypress": "^10.11.0",
     "eslint": "^8.32.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-mantine": "^2.0.0",
+    "eslint-config-next": "^13.1.6",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.1",
