--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mantine/dates": "^6.0.1",
     "@mantine/hooks": "^6.0.1",
     "@mantine/next": "^6.0.1",
+    "@tabler/icons-react": "^2.9.0",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.7",
     "graphql": "^16.6.0",
@@ -28,8 +29,7 @@
     "next-seo": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^2.1.0",
-    "tabler-icons-react": "^1.56.0"
+    "swr": "^2.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
