--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@apollo/client": "^3.7.10",
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
-    "@mantine/core": "^5.9.4",
-    "@mantine/dates": "^5.10.5",
-    "@mantine/hooks": "^5.3.1",
-    "@mantine/next": "^5.10.5",
+    "@mantine/core": "^6.0.1",
+    "@mantine/dates": "^6.0.1",
+    "@mantine/hooks": "^6.0.1",
+    "@mantine/next": "^6.0.1",
+    "@tabler/icons-react": "^2.9.0",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.7",
     "graphql": "^16.6.0",
@@ -28,8 +29,7 @@
     "next-seo": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^2.1.0",
-    "tabler-icons-react": "^1.56.0"
+    "swr": "^2.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
