--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "moviedb-promise": "^4.0.3",
     "next": "^14.0.4",
     "next-seo": "^6.4.0",
+    "octokit": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
-
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
     "@next/eslint-plugin-next": "^14.0.4",
