chore: flesh out coding projects page and components

--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@apollo/client": "^3.9.3",
     "@emotion/react": "^11.11.3",
     "@emotion/server": "^11.11.0",
+    "@mantine/code-highlight": "^7.5.1",
     "@mantine/core": "^7.4.2",
     "@mantine/dates": "^7.5.1",
     "@mantine/hooks": "^7.4.2",
     "@mantine/next": "^6.0.21",
     "@tabler/icons-react": "^2.47.0",
-    "cookies-next": "^4.1.1",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "moviedb-promise": "^4.0.3",
