--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
     "@apollo/client": "^3.9.4",
     "@emotion/react": "^11.11.3",
     "@emotion/server": "^11.11.0",
+    "@mantine/code-highlight": "^7.5.1",
     "@mantine/core": "^7.4.2",
     "@mantine/dates": "^7.5.1",
     "@mantine/hooks": "^7.4.2",
     "@mantine/next": "^6.0.21",
     "@tabler/icons-react": "^2.47.0",
-    "cookies-next": "^4.1.1",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "moviedb-promise": "^4.0.3",
     "next": "^14.0.4",
     "next-seo": "^6.4.0",
+    "octokit": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
-
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
     "@next/eslint-plugin-next": "^14.0.4",
