--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/code-highlight": "^7.5.1",
     "@mantine/core": "^7.4.2",
     "@mantine/dates": "^7.5.1",
+    "@mantine/form": "^7.5.2",
     "@mantine/hooks": "^7.4.2",
     "@mantine/next": "^6.0.21",
     "@tabler/icons-react": "^2.47.0",
