chore: enable vercel speed insights

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@tabler/icons-react": "^2.47.0",
     "@vercel/postgres": "^0.7.2",
+    "@vercel/speed-insights": "^1.0.10",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "moviedb-promise": "^4.0.3",
