--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Run Cypress
         uses: cypress-io/github-action@v6
         with:
-          install-command: npm ci
+          install-command: npm ci --legacy-peer-deps
         env:
           CYPRESS_BASE_URL: ${{ github.event.deployment_status.target_url }}
       - name: Cypress tests ✅
