chore: move next config to mjs file and add optimized pkg imports

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
       "node_modules/",
       "*.config.js",
       "*.config.cjs",
+      "*.config.mjs",
       "cypress/"
     ],
     "parser": "@typescript-eslint/parser",
