--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql": "^16.8.1",
     "moviedb-promise": "^4.0.3",
     "next": "^14.1.0",
+    "next-auth": "^5.0.0-beta.11",
     "octokit": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
