--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "extends": "@commitlint/config-conventional"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.5",
     "@emotion/react": "^11.11.3",
     "@emotion/server": "^11.11.0",
     "@mantine/code-highlight": "^7.5.3",
@@ -27,7 +26,6 @@
     "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.10",
     "dayjs": "^1.11.10",
-    "graphql": "^16.8.1",
     "moviedb-promise": "^4.0.3",
     "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.11",
@@ -54,11 +52,13 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.0.11",
+    "ky": "^1.2.0",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.2.5",
+    "tsx": "^4.7.1",
     "typescript": "^5.1.6"
   },
   "eslintConfig": {
@@ -113,6 +113,7 @@
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "export": "next build && next export",
+    "gen:literal": "tsx ./scripts/gen-literal-data.ts",
     "lint": "eslint . --ext js,ts,tsx",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
