--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@tabler/icons-react": "^2.47.0",
     "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.10",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "moviedb-promise": "^4.0.3",
     "next": "^14.1.1",
     "next-auth": "^5.0.0-beta.13",
     "octokit": "^3.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
@@ -39,8 +41,10 @@
     "@next/eslint-plugin-next": "^14.1.1",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "autoprefixer": "^10.4.18",
     "cypress": "^13.6.6",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "19.0.4",
@@ -58,6 +62,7 @@
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1",
     "tsx": "^4.7.1",
     "typescript": "^5.1.6"
   },
