--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moviedb-promise": "^4.0.3",
     "next": "^14.1.1",
     "next-auth": "^5.0.0-beta.13",
+    "next-themes": "^0.2.1",
     "octokit": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
