--- a/package.json
+++ b/package.json
@@ -13,60 +13,47 @@
     "extends": "@commitlint/config-conventional"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/server": "^11.11.0",
-    "@mantine/code-highlight": "^7.6.1",
-    "@mantine/core": "^7.6.1",
-    "@mantine/dates": "^7.6.1",
-    "@mantine/form": "^7.6.1",
-    "@mantine/hooks": "^7.6.1",
-    "@mantine/next": "^6.0.21",
     "@spotify/web-api-ts-sdk": "^1.2.0",
-    "@tabler/icons-react": "^2.47.0",
+    "@tabler/icons-react": "^3.1.0",
     "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.10",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "moviedb-promise": "^4.0.3",
-    "next": "^14.1.1",
-    "next-auth": "^5.0.0-beta.13",
-    "next-themes": "^0.2.1",
+    "next": "^14.1.4",
+    "next-auth": "^5.0.0-beta.16",
     "octokit": "^3.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.0.3",
-    "@commitlint/config-conventional": "^19.0.3",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "@next/eslint-plugin-next": "^14.1.1",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "autoprefixer": "^10.4.18",
-    "cypress": "^13.6.6",
+    "@tailwindcss/typography": "^0.5.12",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.23",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "autoprefixer": "^10.4.19",
+    "cypress": "^13.7.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-mantine": "^3.1.0",
-    "eslint-config-next": "^14.1.1",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-next": "^14.1.4",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.0.11",
-    "ky": "^1.2.2",
+    "ky": "^1.2.3",
     "lint-staged": "^15.2.2",
-    "postcss": "^8.4.35",
-    "postcss-preset-mantine": "^1.13.0",
-    "postcss-simple-vars": "^7.0.1",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "tsx": "^4.7.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.4.3"
   },
   "eslintConfig": {
     "root": true,
@@ -86,7 +73,6 @@
       "@typescript-eslint"
     ],
     "extends": [
-      "mantine",
       "eslint:recommended",
       "plugin:@typescript-eslint/recommended",
       "plugin:@next/next/recommended"
