--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@vercel/postgres": "^0.8.0",
     "@vercel/speed-insights": "^1.0.10",
     "classnames": "^2.5.1",
-    "moviedb-promise": "^4.0.3",
+    "moviedb-promise": "^4.0.4",
     "next": "^14.1.4",
     "next-auth": "^5.0.0-beta.16",
+    "next-mdx-remote": "^4.4.1",
     "octokit": "^3.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tweet": "^3.2.1",
+    "sugar-high": "^0.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
