--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,10 @@ coverage
 cypress-coverage
 jest-coverage
 .env*.local
+
+# next-video
+videos/*
+!videos/*.json
+!videos/*.js
+!videos/*.ts
+public/_next-video
