--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.17",
     "next-mdx-remote": "^4.4.1",
+    "next-video": "^1.0.4",
     "octokit": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
