--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/postgres": "^0.8.0",
     "@vercel/speed-insights": "^1.0.10",
     "classnames": "^2.5.1",
+    "geist": "^1.3.0",
     "moviedb-promise": "^4.0.4",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.17",
