--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "octokit": "^3.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.10.2",
     "react-tweet": "^3.2.1",
     "reading-time": "^2.0.0-1",
     "sugar-high": "^0.6.1"
