--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "extends": "@commitlint/config-conventional"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@tabler/icons-react": "^3.3.0",
     "@vercel/postgres": "^0.8.0",
@@ -27,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.10.2",
+    "react-pdf-html": "^2.0.4",
     "react-tweet": "^3.2.1",
     "reading-time": "^2.0.0-1",
     "sugar-high": "^0.6.1"
