--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "commitlint": {
     "extends": "@commitlint/config-conventional"
   },
+  "overrides": {
+    "@react-pdf/layout": "3.11.5"
+  },
   "dependencies": {
     "@react-pdf/renderer": "^3.4.4",
     "@spotify/web-api-ts-sdk": "^1.2.0",
@@ -28,7 +31,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.10.2",
-    "react-pdf-html": "^2.0.4",
     "react-tweet": "^3.2.1",
     "reading-time": "^2.0.0-1",
     "sugar-high": "^0.6.1"
