feat: add letboxd script and new data flow

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
+    "convert-csv-to-json": "^2.48.0",
     "cypress": "^13.13.3",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "19.0.4",
@@ -114,6 +115,7 @@
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "export": "next build && next export",
+    "gen:letterboxd": "tsx ./scripts/gen-letterboxd-data.ts",
     "gen:literal": "tsx ./scripts/gen-literal-data.ts",
     "gen:trakt": "tsx ./scripts/gen-trakt-data.ts",
     "lint": "eslint . --ext js,ts,tsx",
