--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "next-auth": "^5.0.0-beta.25",
     "next-mdx-remote": "^5.0.0",
     "octokit": "^4.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-intersection-observer": "^9.15.1",
     "sugar-high": "^0.8.2"
   },
