--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "extends": "@commitlint/config-conventional"
   },
   "overrides": {
-    "@react-pdf/layout": "3.11.5"
+    "@react-pdf/layout": "3.11.5",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^3.4.5",
+    "@react-pdf/renderer": "^4.1.6",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@tabler/icons-react": "^3.29.0",
     "@vercel/postgres": "^0.10.0",
@@ -24,7 +26,7 @@
     "classnames": "^2.5.1",
     "geist": "^1.3.1",
     "moviedb-promise": "^4.0.7",
-    "next": "^14.2.5",
+    "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "next-mdx-remote": "^5.0.0",
     "octokit": "^4.1.0",
@@ -36,11 +38,11 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@next/eslint-plugin-next": "^14.2.16",
+    "@next/eslint-plugin-next": "15.1.6",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.10.7",
-    "@types/react": "^18.3.13",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
@@ -49,7 +51,7 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-next": "^14.2.16",
+    "eslint-config-next": "15.1.6",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
@@ -110,7 +112,7 @@
   },
   "private": true,
   "scripts": {
-    "dev": "echo \"http://$(eval 'ipconfig getifaddr en0'):3000\" | pbcopy && next dev",
+    "dev": "echo \"http://$(eval 'ipconfig getifaddr en0'):3000\" | pbcopy && next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
