--- a/package.json
+++ b/package.json
@@ -38,24 +38,25 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/compat": "^1.2.5",
     "@next/eslint-plugin-next": "15.1.6",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.10.10",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
     "convert-csv-to-json": "^2.50.0",
     "cypress": "^13.17.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.18.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "15.1.6",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "husky": "^9.1.7",
     "ky": "^1.7.4",
     "lint-staged": "^15.4.2",
@@ -64,40 +65,6 @@
     "tailwindcss": "^4.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "ignorePatterns": [
-      "node_modules/",
-      "*.config.js",
-      "*.config.cjs",
-      "*.config.mjs",
-      "cypress/"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    },
-    "plugins": [
-      "react",
-      "@typescript-eslint"
-    ],
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:@next/next/recommended"
-    ],
-    "rules": {
-      "@typescript-eslint/ban-ts-ignore": "off",
-      "@typescript-eslint/ban-ts-comment": "off",
-      "@typescript-eslint/explicit-function-return-type": "off",
-      "@typescript-eslint/explicit-module-boundary-types": "off",
-      "@typescript-eslint/no-explicit-any": "off",
-      "@typescript-eslint/no-unused-vars": "off",
-      "import/extensions": "off",
-      "react/react-in-jsx-scope": "off",
-      "react/no-unescaped-entities": "off"
-    }
   },
   "lint-staged": {
     "*.+(ts|tsx)": [
@@ -120,7 +87,7 @@
     "gen:letterboxd": "tsx ./scripts/gen-letterboxd-data.ts",
     "gen:literal": "tsx ./scripts/gen-literal-data.ts",
     "gen:trakt": "tsx ./scripts/gen-trakt-data.ts",
-    "lint": "eslint . --ext js,ts,tsx",
+    "lint": "eslint .",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "prepare": "husky",
