--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"classnames": "^2.5.1",
 		"geist": "^1.3.1",
 		"moviedb-promise": "^4.0.7",
-		"next": "15.1.6",
+		"next": "^15.2.0",
 		"next-auth": "^5.0.0-beta.25",
 		"next-mdx-remote": "^5.0.0",
 		"octokit": "^4.1.2",
