--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"next-auth": "^5.0.0-beta.25",
 		"next-mdx-remote": "^5.0.0",
 		"octokit": "^4.1.2",
-		"react": "19.0.0",
-		"react-dom": "19.0.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"react-intersection-observer": "^9.16.0",
 		"sugar-high": "^0.9.3"
 	},
@@ -37,8 +37,8 @@
 		"@tailwindcss/postcss": "^4.1.2",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/node": "^22.14.0",
-		"@types/react": "19.0.12",
-		"@types/react-dom": "19.0.4",
+		"@types/react": "^19.1.0",
+		"@types/react-dom": "^19.1.1",
 		"convert-csv-to-json": "^2.50.0",
 		"cypress": "^14.2.1",
 		"husky": "^9.1.7",
